1.5/deployment_back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:      
      - name: multitool
        image: praqma/network-multitool:latest
        imagePullPolicy: IfNotPresent
        # env:
        # - name: HTTP_PORT
        #   value: "8080"
