1.5/service_front.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend 
  ports:
    - name: nginx  
      protocol: TCP
      port: 9001
      targetPort: 80
